# stock-sentiment-analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  ROADMAP.MD  airflow_settings.yaml  pyproject.toml  requirements.txt
.astro/: config.yaml
config/: stocks.yaml
config_yamls/: stocks.yaml
dags/: master_dag.py
dags/news/: get_data_news_api.py  news_api_to_s3.py  news_api_to_s3_to_postgres.py  procces_news.py
dags/stocks/: get_data_stocks.py  process_stocks.py
include/: utils.py
include/python_operators/: commons.py
include/python_operators/news/: get_data_news_api.py  news_api_to_s3.py  news_api_to_s3_to_postgres.py  proccess_news.py
migrations/: env.py
migrations/versions/: 61b3c704bb42_supporting_extract_and_upload_s3.py  d684085d11d1_news_stocks_basic_schema_2.py
models/: __init__.py  base.py  news.py  stocks.py
scripts/: lint-fix.bat
settings/: settings.py
