[project]
name = "stock-sentiment-analysis"
version = "0.1.0"
description = "Capstone project for zachwilson bootcamp"
authors = [
    {name = "Tobias Sartori",email = "tobiasfaculdade@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
